feat(all): implement add reservation component and api